# pbg-medyan

./: README.md  index.html  pyproject.toml  python_demo.html
demo/: cxx_demo_report.py  cxx_report.html  cxx_smoke.py  demo_report.py  report.html
docs/: macos_arm64_build.md
pbg_medyan/: __init__.py  composites.py  engine.py  membrane.py  processes.py
pbg_medyan/cxx/: __init__.py  io.py  process.py  templates.py
tests/: test_composites.py  test_cxx_integration.py  test_cxx_io.py  test_cxx_process.py  test_engine.py  test_membrane.py  test_processes.py
