[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-medyan"
version = "0.1.0"
description = "Process-bigraph wrapper for MEDYAN-style mechanochemical cytoskeletal network simulations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "bigraph-viz",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "plotly"]

[tool.setuptools.packages.find]
include = ["pbg_medyan*"]
